--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,15 @@ h3 {
 a {
     color:black;
 }
+
+blockquote {
+    border-left: 5px solid #fe7900;
+}
+
+.about {
+    margin-bottom: 145px;
+}
+
+.divider {
+    margin-bottom: 50px;
+}
